进行样式配置

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,49 @@
+# 个人信息
 site_name: 小风的代码世界
 site_url: https://www.cloudinwind.github.io
 site_author: 小风
+
+repo_name: cloudinwind/cloudinwind.github.io
+repo_url: https://github.com/cloudinwind/cloudinwind.github.io
+
+edit_uri: blob/main/docs/
+
 theme:
-  name: material #主题
+  name: material
+  features:
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.footer
+    - navigation.top
+    - navigation.sections
+    - content.action.edit
+    - content.tabs.link
+  icon:
+    repo: fontawesome/brands/github
+
+plugins:
+  - search:
+      lang: zh
+
+# LaTeX支持
+markdown_extensions:
+  - pymdownx.arithmatex:
+      generic: true
+  - admonition
+  - pymdownx.details
+  - pymdownx.tilde
+  - pymdownx.superfences
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.highlight:
+      use_pygments: true
+  - footnotes
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tabbed:
+      alternate_style: true
+  - attr_list
+  - md_in_html
