--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,44 +104,33 @@ plugins:
 #   - md_in_html
 
 markdown_extensions:
-  - abbr
-  - attr_list
   - admonition
+  - attr_list
   - def_list
   - footnotes
-  - callouts
   - md_in_html
-  - markdown.extensions.abbr # 支持Markdown文件上方自定义标题标签等
-  - pymdownx.magiclink
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.caret
-  - pymdownx.betterem
   - pymdownx.critic
   - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight
   - pymdownx.inlinehilite
   - pymdownx.keys
+  - pymdownx.magiclink
   - pymdownx.mark
-  - pymdownx.snippets
-  - pymdownx.smartsymbols
-  - pymdownx.tilde
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
           class: mermaid
-          format: !!python/name:pymdownx.superfences.fence_code_format 
-  - pymdownx.arithmatex:  # latex支持
-      generic: true
-  - toc:
-      permalink: true # 固定标题位置为当前位置
-  - pymdownx.highlight: # 代码块高亮
-      anchor_linenums: true
-      linenums: true # 显示行号
-      # auto_title: true # 显示编程语言名称
-  - pymdownx.emoji:
-      emoji_index: !!python/name:material.extensions.emoji.twemoji
-      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+          format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.tasklist:
       custom_checkbox: true
-
-
+  - pymdownx.tilde
+  - toc:
+      permalink: true
