--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -134,3 +134,12 @@ markdown_extensions:
   - pymdownx.tilde
   - toc:
       permalink: true
+
+extra_css:
+  - stylesheets/custom.css
+
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - javascripts/waifu/autoload.js  # 十分耗时，放在最后加载
